# Data-Pipeline-for-ML

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  setup.py
data/: customers.csv  products.csv  sales.csv
src/: example_usage.py  main.py  pipeline.py  sample_data_generator.py  validation.py  visualization.py
tests/: test_pipeline.py
