[project]
name = "simple-data-preparation-pipeline"
version = "0.1.0"
description = "Project by KVS using Claude Code CLI tool as AI assistant"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "pytest>=8.4.1",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
]
